[package]
name = "third"
version = "0.1.0"
authors = ["jarra <suhrawardi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
env_logger = "0.7"
futures = "0.3"
image = "0.23"
nannou = "0.15.0"
rand = "0.8.3"
rand_distr = "0.4.0"
shaderc = "0.7"
log = "0.4"
wgpu = "0.6"
winit = "0.22"
